# car-labs

./: README.md
bem/: zip-benchmarking.bat
bem/sorting/algorithms/c/: .gitignore  CMakeLists.txt  Makefile  hyperfine-test.sh
bem/sorting/algorithms/c/release/: bubbleSort  run.cmd  run.sh
bem/sorting/algorithms/c/src/: fct.hpp  main.c
bem/sorting/data/: 100k.txt  10k.txt  10k_sorted.txt  1k.txt  20.txt  50k.txt  50k_sorted.txt  5k.txt
bem/zip/: zip-benchmarking.bash  zip-benchmarking.bat
dbg/rust-mystery/: .gitignore  Cargo.toml  justfile
dbg/rust-mystery/release/: rust_mystery_v1_0_0_Linux_x64  rust_mystery_v1_0_0_Mac_AARCH64
dbg/rust-mystery/src/: main.rs
heirv32_sc/: .gitignore  README.md  car-labs.bash  car-labs.bat
heirv32_sc/Board/concat/: car-labs.lpf  ebs2_heirv32.ucf
heirv32_sc/Prefs/: hds.hdp
heirv32_sc/Scripts/: cleanGenerated.bash  cleanGenerated.bat  cleanScratch.bat  generateSSHKey.bash  hdlDesigner.bash  hdlDesigner.bat  searchPaths.bat  start_diamond.pl  start_libero.pl  trimLibs.pl  update_diamond.pl  update_ise.pl  update_libero.pl
heirv32_sc/Simulation/: code.s  code_bram.txt  code_sc.s  code_sc_bram.txt  code_sc_ebs3.s  code_sc_ebs3_bram.txt  code_sc_ebs3_syn.txt  code_sim.s  code_sim_bram.txt  sc_heirv32.do
heirv32_sc/heirv32-asm/: README.md  tassembly.s  tassembly.txt  tassembly_bram.txt  tassembly_bram_disassembly.s  tassembly_disassembly.s  tassembly_disassembly.txt  tassembly_syn.txt
isa/: ex4.3_dump.txt  ex4.3_helperFunctions.asm
isa/heirv32-asm/: README.md  tassembly.s  tassembly_disassembly.s  tassembly_syn.txt
(+599 files in other folders)
